examples/sample-product-chart/chart-test/reports/run-full-bench-20260609-085346/scenario-gateway-api-istio-egress-20260609-093626/artifacts/manifests/istio-gateways.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: Gateway
  metadata:
    creationTimestamp: "2026-06-09T13:37:05Z"
    generation: 1
    name: egressgateway
    namespace: istio-system
    resourceVersion: "647"
    uid: 8f4843a0-070b-43f3-84de-cae6de89515a
  spec:
    selector:
      istio: egressgateway
    servers:
    - hosts:
      - httpbin.org
      port:
        name: http
        number: 80
        protocol: HTTP
kind: List
metadata:
  resourceVersion: ""
