examples/sample-product-chart/chart-test/reports/run-full-bench-20260609-085346/scenario-gateway-api-istio-egress-20260609-093626/artifacts/manifests/istio-virtualservices.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    creationTimestamp: "2026-06-09T13:37:05Z"
    generation: 1
    name: httpbin-via-egress
    namespace: sample
    resourceVersion: "655"
    uid: 0c5d146d-ad99-4d01-8673-b8fbd869f28c
  spec:
    gateways:
    - istio-system/egressgateway
    - mesh
    hosts:
    - httpbin.org
    http:
    - match:
      - gateways:
        - mesh
        port: 80
      route:
      - destination:
          host: istio-egressgateway.istio-system.svc.cluster.local
        weight: 100
    - match:
      - gateways:
        - istio-system/egressgateway
        port: 80
      route:
      - destination:
          host: httpbin.org
          port:
            number: 80
        weight: 100
kind: List
metadata:
  resourceVersion: ""
